// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movement component Matches the snapshot 1 1`] = `
<div
  className="Movement"
>
  <div
    className="Movement__name"
  >
    <span>
      Name
    </span>
  </div>
  <div
    className="Movement__amount"
  >
    <span
      className="Movement__amount-expense"
    >
      -
      40
       €
    </span>
  </div>
  <div
    className="Movement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--bin"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Movement component Matches the snapshot 2 1`] = `
<div
  className="Movement"
>
  <div
    className="Movement__name"
  >
    <span>
      Name
    </span>
  </div>
  <div
    className="Movement__amount"
  >
    <span
      className="Movement__amount-income"
    >
      +
      40
       €
    </span>
  </div>
  <div
    className="Movement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--bin"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Movement component Matches the snapshot 3 1`] = `
<div
  className="Movement"
>
  <div
    className="Movement__name"
  >
    <span>
      Name
    </span>
  </div>
  <div
    className="Movement__amount"
  >
    <span
      className="Movement__amount-income"
    >
      +
      40
       €
    </span>
  </div>
  <div
    className="Movement__frequency"
  >
    <i
      className="icon--calendar"
    />
    <div
      className="Movement__frequency-text-container"
    >
      <span
        className="Movement__frequency-text"
      >
        men
      </span>
    </div>
  </div>
  <div
    className="Movement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--bin"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Movement component Matches the snapshot 4 1`] = `
<div
  className="Movement"
>
  <div
    className="Movement__name"
  >
    <span>
      Name
    </span>
  </div>
  <div
    className="Movement__amount"
  >
    <span
      className="Movement__amount-income"
    >
      +
      40
       €
    </span>
  </div>
  <div
    className="Movement__frequency"
  >
    <i
      className="icon--calendar"
    />
    <div
      className="Movement__frequency-text-container"
    >
      <span
        className="Movement__frequency-text"
      >
        feb
      </span>
    </div>
  </div>
  <div
    className="Movement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--bin"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Movement component Matches the snapshot 5 1`] = `
<div
  className="Movement"
>
  <div
    className="Movement__name"
  >
    <span>
      Name
    </span>
  </div>
  <div
    className="Movement__amount"
  >
    <span
      className="Movement__amount-income"
    >
      +
      40
       €
    </span>
  </div>
  <div
    className="Movement__frequency"
  >
    <i
      className="icon--calendar"
    />
    <div
      className="Movement__frequency-text-container"
    >
      <span
        className="Movement__frequency-text"
      >
        ago
      </span>
      <span
        className="Movement__frequency-text"
      >
        nov
      </span>
    </div>
  </div>
  <div
    className="Movement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--bin"
      onClick={[Function]}
    />
  </div>
</div>
`;
